--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "json-server": "^0.17.0",
+    "vue": "^2.7.8",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "node-sass": "7.0.1",
+    "sass-loader": "13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,6 +33,11 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
